--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "js-yaml": "^4.1.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.11.0",
+    "sequelize-typescript": "^2.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -37,7 +43,9 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
+    "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
