--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "joi": "^17.5.0",
     "js-yaml": "^4.1.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
