--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
+    "@nestjsx/crud": "^5.0.0-alpha.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.5.0",
