--- a/package.json
+++ b/package.json
@@ -21,17 +21,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@andresmeidla/crud-sequelize": "^4.6.27-alpha.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
-    "@nestjsx/crud": "^5.0.0-alpha.3",
+    "@nestjsx/crud": "^4.4.1",
+    "@nestjsx/crud-request": "^4.4.1",
+    "@nestjsx/util": "^5.0.0-alpha.3",
+    "@zmotivat0r/o0": "^1.0.2",
+    "accept-language-parser": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "iso-639-1": "^2.1.10",
     "joi": "^17.5.0",
     "js-yaml": "^4.1.0",
+    "loadash": "^1.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,6 +53,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
