--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/user-auth/*": ["src/user-auth/*"]
+    }
   }
 }
