--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.11.0",
     "sequelize-typescript": "^2.1.1",
-    "tscpaths": "^0.0.9"
+    "tscpaths": "^0.0.9",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
